--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
-0.1
-- first working version of the project
-- simple UI allows user to create projects/jobs/tasks and check their results
-- volunteer code is working, tasks can be computed by volunteers and sent back to server
+0.3
+- additional convenience methods in RestClient that to retrieve many task results at once in a blocking or non-blocking way
+- possibility to set up timeout on per-task basis 
+- newer dependency versions in POM 
 
 0.2
 - better url handling (no need to write /index.html)
@@ -10,3 +10,8 @@
 - added possibility to define properties file in edward.config system property,
 reading jdbc properties from it
 - creating zip package
+
+0.1
+- first working version of the project
+- simple UI allows user to create projects/jobs/tasks and check their results
+- volunteer code is working, tasks can be computed by volunteers and sent back to server
