--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.5
+- fixed bug that sometimes caused many volunteers to get the same task even if concurrency level was set to 1
+
 0.4
 - added possibility to embed volunteer code in existing websites (embedded-volunteer-snippet.html)
 - volunteers now register and send heartbeat so that server knows how many of them are connected
